--- a/src/app/pages/organization/employees/templates/education/addEducation-modal.html
+++ b/src/app/pages/organization/employees/templates/education/addEducation-modal.html
@@ -1,5 +1,4 @@
 
-
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
@@ -9,6 +8,9 @@
   </div>
   <div class="modal-body">
    
+<!--<div ng-repeat="col in tempFormrows">-->
+  <field-Box ng-model="email" ></field-Box>
+<!--</div>-->
 <div class="row">
   
   <div class="col-sm-4">
