--- a/src/app/pages/organization/employees/templates/education/editEducation-modal.html
+++ b/src/app/pages/organization/employees/templates/education/editEducation-modal.html
@@ -11,6 +11,21 @@
    
 <div class="row">
   
+ <div class="col-sm-4">
+    <div class="form-group">
+      <label for="qualification">Qualification</label>
+         <select id="qualification_{{$index}}"
+                      name="qualification_{{$index}}"
+                      ng-model="empEducationDetail.QualQualificationId"
+                      class="form-control"
+                      ng-options="qualification.value as qualification.name for qualification in qualification"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>
+    </div>
+  </div>
+
   <div class="col-sm-4">
     <div class="form-group">
       <label for="qualification">Qualification</label>
