--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -10,7 +10,7 @@
 <div ba-panel ba-panel-class="x-medium" ba-panel-title="Add Employee">
   <form name="form" ng-submit="addCtrl.saveForm(addCtrl.empAdd)">
     <div class="row">
-
+   <field-Box ng-model="email" ></field-Box>
     <div class="col-sm-1">
         <div class="form-group">
           <label for="inputTitle">Title*</label>
