--- a/src/app/pages/organization/employees/edit/employees.edit.html
+++ b/src/app/pages/organization/employees/edit/employees.edit.html
@@ -28,8 +28,8 @@
 
                 <br/>
 
-                <label ng-bind="editCtrl.empBasicDetail.DeptName"></label>
-                <label ng-bind="editCtrl.empBasicDetail.DesgName"></label>
+                <span ng-bind="editCtrl.empBasicDetail.DeptName"></span><br/>
+                <span ng-bind="editCtrl.empBasicDetail.DesgName"></span>
 
                 <br/>
                 <ul class="list-unstyled side-menu">
