--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -108,6 +108,11 @@
   overflow-x:scroll;
   max-height: 500px;
 }
+.pnlWithFooter .panel-body{
+  overflow-x:scroll;
+  max-height: 460px;
+  height: 460px;
+}
 .modal .modal-dialog.modal-top-center-500
 {
   width: 600px;
