--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -80,15 +80,16 @@
                 </div>
             </div>
             <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll" ng-show="page.showAddRecord">
-                <div class="panel-heading clearfix" ng-show="(page.selectedRows.length<=0)">
+                <div class="panel-heading clearfix" style="padding-top:0px;">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-5" style="padding-top:15px">
                             <button type="button" class="btn btn-xs btn-default" ng-click="page.closeAddRecord()"><i class="ion-back"></i>Back</button>                            {{page.pageinfo.tagline}}
                         </div>
-                        <div class="col-md-6">
+                         <div class="col-md-7" style="padding-top:5px">
                             <div class="pull-right">
-
-
+                                <button type="submit" class="btn  btn-sm btn-primary" ng-click="saveForm()">Save</button>
+                                <button type="button" class="btn  btn-sm btn-warning" ng-click="resetForm()">Reset</button>
+                                <button type="button" class="btn  btn-sm btn-danger" ng-click="closeForm()">Close</button>
                             </div>
                         </div>
                     </div>
